--- a/Newstyle.scss
+++ b/Newstyle.scss
@@ -230,7 +230,7 @@
  }
 
  .meinblock__checkout-buy {
- margin-top: 15px;
+  margin-top: 15px;
    height: 50px;
    width: 273px;
    background-color: $badyColorpink;
@@ -241,7 +241,406 @@
    text-align: center;
    border: none;
    justify-content: space-between;
+ }
+
+ .meinblock__buyerinfo {
+   margin-top: 90px;
+
+   &-Adress {
+   @extend .shoppinginfo;
+   }
+   &-Shoppingadres {
+     display: flex;
+     margin-left: 35px;
+     margin-top: 40px;
+     &-Register {
+       @extend .shoppingregister;
+       width: 580px;
+     }
+     &-Text {
+       @extend .shoppingtext;
+       margin-top: 15px;
+       margin-bottom: 30px;
+     }
+     &-Cseckout {
+       margin-bottom: 15px;
+       font-size: 12px;
+       font-weight: 400;
+       text-transform: uppercase;
+       color: $badyColorblack;
+     }
+     &-Easy {
+       @extend .shoppingtext;
+       margin-bottom: 15px;
+       color: #6f6e6e;
+     }
+     &-Button {
+         width: 180px;
+         height: 50px;
+         background-color: $badyColorwhite;
+         border: 1px solid $badyColorsearchgrey;
+         text-align: center;
+         font-size: 14px;
+         font-weight: 700;
+         text-transform: uppercase;
+         color: $badyColorsearchgrey;
+       margin-bottom: 75px;
+       padding-right: 20px;
+      }
+   }
+   &-Pasword {
+     @extend .shoppingregister;
+     width: 392px;
+     & label {
+       margin-top: 15px;
+       margin-top: 15px;
+     }
+   }
 
  }
+ .meinblock__buyerinfo-Requerd {
+   @extend .shoppingtext;
+   color: red;
+   margin-top: 20px;
+ }
+
+ .meinblock__buyerinfo-Method {
+   @extend .shoppinginfo;
+   margin-bottom: 30px;
+   margin-top: 30px;
+ }
+ em {
+   color: red;
+ }
+ .email {
+   height: 45px;
+   width: 390px;
+   margin-top: 10px;
+   margin-bottom: 10px;
+ }
+
+ .Login {
+   margin: 15px 15px 15px 0;
+    }
+
+.mainBlock__WoomenCollechtion {
+  text-align: center;
+
+   &-background {
+     margin-top: 10px;
+     height: 777px;
+     background-color: #f7f7f7;
+     background-image: url("../Single page/Foto1.png");
+     background-repeat: no-repeat;
+     border-bottom: 1px solid $badyColorsearchgrey;
+     background-position: center;
+   }
+  &-border {
+    height: 730px;
+    width: 1141px;
+    border: 1px solid $badyColorsearchgrey;
+    margin-top: -86px;
+    padding-top: 70px;
+    overflow: hidden;
+    background-color: $badyColorwhite;
+     &-Women {
+       font-size: 14px;
+       line-height: 24px;
+       font-weight: 700;
+       color: $badyColorpink;
+       margin-bottom: 13px;
+     }
+    &-line {
+      margin: 0 auto;
+      border-bottom: 1px solid $badyColorsearchgrey;
+      width: 147px;
+    }
+    &-linepink {
+      margin: 0 auto;
+      border-bottom: 3px solid $badyColorpink;
+      width: 63px;
+      position: relative;
+      margin-bottom: 17px;
+    }
+    &-Moschino {
+      font-size: 18px;
+      line-height: 24px;
+      font-weight: 900;
+      text-transform: uppercase;
+      color: #4d4d4d;
+      margin-bottom: 65px;
+    }
+    &-Text {
+      margin: 0 auto;
+      width: 621px;
+      font-size: 14px;
+      line-height: 24px;
+      font-weight: 300;
+      color: #5e5e5e;
+      margin-bottom: 30px;
+    }
+  }
+  &-aboutmodell {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 40px;
+    &-Material {
+      margin-right: 40px;
+      font-size: 14px;
+      line-height: 24px;
+      font-weight: 700;
+      color: $badyColorgrey;
+      & span {
+        color: #2f2f2f;
+      }
+    }
+    &-Dezigner {
+      font-size: 14px;
+      line-height: 24px;
+      font-weight: 700;
+      color: $badyColorgrey;
+      & span {
+        color: #2f2f2f;
+      }
+    }
+  }
+  &-Prise {
+    font-size: 24px;
+    line-height: 24px;
+    font-weight: 700;
+    color: $badyColorpink;
+    margin-bottom: 45px;
+  }
+  &-Hcoose {
+    margin: 0 auto;
+    width: 621px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    &-Color {
+      margin-top: 61px;
+      font-size: 14px;
+      line-height: 24px;
+      font-weight: 700;
+      color: #2f2f2f;
+      margin-bottom: 15px;
+    }
+    &-button {
+      width: 144px;
+      height: 35px;
+      background: $badyColorwhite;
+      & i {
+        text-align: right;
+      }
+    }
+  }
+  &-Cart {
+    margin: 0 auto;
+    width: 621px;
+    height: 55px;
+    background-color: $badyColorwhite;
+    border: 1px solid $badyColorpink;
+
+    & i {
+      padding: 22px;
+      font-size: 16px;
+      font-weight: 700;
+      color: $badyColorpink;
+      vertical-align: center;
+
+    }
+  }
+}
+.SecthinBlock {
+  margin-top: 120px;
+  text-align: center;
+   & section {
+     font-size: 24px;
+     line-height: 20px;
+     font-weight: 900;
+     text-transform: uppercase;
+     color: #4d4d4d;
+   }
+   &__Woomen {
+     margin-top: 70px;
+     display: flex;
+     justify-content: space-between;
+     &-products {
+       height: 364px;
+       width: 263px;
+       &-foto {
+         width: 263px;
+         height: 280px;
+         background-color: #e9e9e9;
+         background-position: inherit;
+         background-repeat: no-repeat;
+       }
+       &-product {
+         text-align: left;
+         font-size: 14px;
+         font-weight: 400;
+         text-transform: uppercase;
+         color: #6f6e6e;
+         margin-top: 20px;
+         margin-bottom: 20px;
+       }
+       &-prise {
+         text-align: left;
+         font-size: 16px;
+         font-weight: 700;
+         text-transform: uppercase;
+         color: $badyColorpink;
+       }
+     }
+   }
+}
+
+
+.meinBlock__choice {
+  display: flex;
+  margin-top: 60px;
+  }
+.meinBlock__choice-navi{
+      width: 243px;
+      margin-right: 50px;
+      position: relative;
+      display: inline-block;
+      height: auto;
+      &-category {
+        height: 37px;
+        width: 243px;
+        font-size: 14px;
+        line-height: 20px;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: #6f6e6e;
+        border: none;
+        border-bottom: 1px solid $badyColorsearchgrey;
+        border-left: 5px solid $badyColorpink;
+        margin-bottom: 20px;
+        text-align: left;
+        padding-left: 12px;
+      }
+      &-Content {
+        display: none;
+        position: absolute;
+        min-width: 243px;
+        background-color: #e9e9e9;
+        z-index: 1;
+        a {
+          text-decoration: none;
+          font-size: 14px;
+          line-height: 33px;
+          font-weight: 400;
+          color: #6f6e6e;
+          display: block;
+          padding-left: 15px;
+        }
+        a:hover {
+          background-color: $badyColorsearchgrey;
+        }
+      }
+}
+.meinBlock__choice-navi:hover .meinBlock__choice-navi-Content {
+   display: block;
+}
+
+.meinBlock__choice-navi:hover .meinBlock__choice-navi-category {
+  color: $badyColorpink;
+}
+
+.meinBlock__choice-product {
+  width: 100%;
+
+  &-menu {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+
+    article {
+      font-size: 14px;
+      line-height: 20px;
+      font-weight: 700;
+      text-transform: uppercase;
+      color: #6f6e6e;
+      margin-bottom: 25px;
+    }
+
+    ul {
+      height: 55px;
+      width: 156px;
+      list-style-type: none;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      border: none;
+
+      li {
+        justify-content: space-around;
+        text-align: center;
+        border-left: 1px solid $badyColorsearchgrey;
+        border-right: 1px solid $badyColorsearchgrey;
+        font-size: 14px;
+        line-height: 26px;
+        font-weight: 400;
+        color: #6f6e6e;
+      }
+
+      li:hover {
+        color: $badyColorpink;
+      }
+    }
+
+    form {
+        height: 55px;
+        width: 255px;
+      display: block;
+      justify-content: space-between;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      input {
+        margin-right: 3px;
+        height: 13px;
+        width: 13px;
+
+
+        border: $badyColorsearchgrey;
+      }
+      Label {
+        font-size: 14px;
+        line-height: 20px;
+        font-weight: 400;
+        text-transform: uppercase;
+        color: #6f6e6e;
+        margin-right: 25px;
+      }
+
+
+
+    }
+
+  }
+}
+
+
+.meinBlock__choice-product-verticalnave {
+  width: 50px;
+  margin-bottom: 50px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
