--- a/Newstyle.css
+++ b/Newstyle.css
@@ -99,10 +99,12 @@
   text-align: center; }
 
 .buttonmail {
+  overflow: hidden;
   text-align: center;
   margin-top: 35px; }
 
 .mail {
+  overflow: hidden;
   height: 46px;
   width: 280px;
   padding-left: 30px;
@@ -117,6 +119,7 @@
   overflow: hidden; }
 
 .subscribe {
+  overflow: hidden;
   height: 46px;
   width: 104px;
   border: none;
@@ -209,14 +212,16 @@
   align-items: center;
   vertical-align: center; }
 
-.icon i:hover {
-  color: black; }
-
 .icon i {
   font-size: 16px;
   line-height: 42px;
   font-weight: 400;
   color: #b2b2b2; }
+
+.icon i:hover {
+  color: black;
+  width: 120%;
+  height: 120%; }
 
 .icon-twitter i {
   font-size: 16px;
@@ -275,6 +280,13 @@
   border: 1px solid #e6e6e6;
   border-radius: 3px;
   height: 38px; }
+  .header .__search select {
+    font-size: 14px;
+    line-height: 32px;
+    font-weight: 300;
+    color: #838383;
+    text-align: center;
+    border: none; }
 
 .search__browse {
   font-size: 14px;
@@ -282,8 +294,6 @@
   font-weight: 300; }
 
 .search__browse i {
-  Text: fa-caret-down;
-  font-family: FontAwesome;
   font-size: 14px;
   line-height: 32px;
   font-weight: 400;
@@ -313,7 +323,7 @@
   border: none; }
 
 .buttonsearch i :hover {
-  color: black; }
+  color: #570813; }
 
 .cart {
   width: 32px;
@@ -321,7 +331,7 @@
   text-align: center; }
 
 .cart:hover {
-  color: black; }
+  color: #570813; }
 
 .header .Myaccount {
   margin-left: 20px;
@@ -336,7 +346,7 @@
   text-align: center; }
 
 .header .Myaccount:hover {
-  color: black; }
+  color: #570813; }
 
 .header .Myaccount i {
   Text: fa-caret-down;
@@ -348,7 +358,7 @@
   text-align: center; }
 
 .Myaccount i:hover {
-  color: black; }
+  color: #570813; }
 
 .header-line {
   border-bottom: 1px solid #e6e6e6; }
@@ -368,8 +378,8 @@
 .TopNav > .menu > li:not(:last-child) {
   margin-right: 48px; }
 
-.menu li:hover {
-  color: black; }
+.TopNav > .menu:hover {
+  color: #570813; }
 
 .header__button {
   height: 148px;
@@ -402,7 +412,7 @@
   color: #f16d7f; }
 
 .header__new-navi-pink:hover {
-  color: black; }
+  color: #570813; }
 
 .shoppinginfo, .meinblock__buyerinfo-Adress, .meinblock__buyerinfo-Method {
   font-size: 16px;
@@ -455,6 +465,267 @@
   width: 1140px;
   min-height: 100%;
   margin: 0 auto; }
+
+.meinBlock {
+  min-height: 614px;
+  background-image: url(../Brand/indexslid.png);
+  background-position: center;
+  background-repeat: no-repeat; }
+
+.meinBlock-text {
+  text-transform: uppercase;
+  align-items: center;
+  display: flex;
+  padding-top: 207px;
+  height: 92px; }
+
+.meinBlock__rose {
+  background-color: #f16d7f;
+  width: 12px;
+  height: 100px;
+  display: flex;
+  margin-right: 10px; }
+
+.meinBlock__thebrand {
+  font-size: 60px;
+  font-weight: 900;
+  border: none; }
+
+.meinBlock__oflaxeri {
+  flex-wrap: wrap;
+  font-size: 40px;
+  font-weight: 900; }
+
+.meinBlock__oflaxeri span {
+  font-size: 40px;
+  font-weight: 900;
+  color: #f16d7f; }
+
+.typBlock {
+  margin-top: 100px;
+  max-height: 820px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  border: none; }
+
+.typBlock__man {
+  position: relative; }
+
+.typBlock__man-for {
+  position: absolute;
+  font-size: 18px;
+  font-weight: 900;
+  text-transform: uppercase;
+  height: 82px;
+  width: 175px;
+  background-color: white;
+  margin-top: -517px;
+  text-align: center;
+  vertical-align: center;
+  border: none; }
+
+.typBlock__man-for span {
+  font-size: 30px;
+  color: #f16d7f; }
+
+.typBlock__accesories {
+  position: relative; }
+
+.typBlock__accssorias-luxirous {
+  position: absolute;
+  font-size: 18px;
+  font-weight: 900;
+  text-transform: uppercase;
+  height: 82px;
+  width: 225px;
+  background-color: white;
+  border: none;
+  margin-top: -236px;
+  text-align: center; }
+
+.typBlock__accssorias-luxirous span {
+  font-size: 30px;
+  color: #f16d7f; }
+
+.typBlock__vomen {
+  position: relative; }
+
+.typBlock__vomen-for {
+  position: absolute;
+  font-size: 18px;
+  font-weight: 900;
+  text-transform: uppercase;
+  height: 82px;
+  width: 162px;
+  background-color: white;
+  border: none;
+  margin-top: -236px;
+  text-align: center; }
+
+.typBlock__vomen-for span {
+  font-size: 30px;
+  color: #f16d7f; }
+
+.typBlock__kids {
+  position: relative; }
+
+.typBlock__kids-for {
+  position: absolute;
+  font-size: 18px;
+  font-weight: 900;
+  text-transform: uppercase;
+  height: 82px;
+  width: 225px;
+  background-color: white;
+  border: none;
+  margin-top: -517px;
+  text-align: center; }
+
+.typBlock__kids-for span {
+  font-size: 30px;
+  color: #f16d7f; }
+
+.Text-Fetured {
+  margin-top: 90px;
+  text-align: center;
+  font-size: 30px;
+  line-height: 54px;
+  font-weight: 700; }
+
+.Text-Shop {
+  text-align: center;
+  font-size: 14px;
+  line-height: 54px;
+  font-weight: 400;
+  color: #9f9f9f; }
+
+.ShopBlock {
+  margin-top: 60px;
+  height: 720px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; }
+
+.ShopBlock-Items {
+  height: 345px;
+  weight: 261px;
+  background-blend-mode: color;
+  position: relative;
+  opacity: 1; }
+
+.ShopBlock-Items img:hover {
+  opacity: 0.5; }
+
+.BrowseAll {
+  display: flex;
+  margin-top: 70px;
+  text-align: center;
+  height: 48px;
+  width: 212px;
+  border: none;
+  justify-content: center;
+  align-items: center;
+  background-color: #f16d7f;
+  font-size: 16px;
+  line-height: 54px;
+  font-weight: 700;
+  color: #ffffff;
+  outline: none;
+  overflow: hidden; }
+
+.BrowseAll:hover {
+  color: lightpink; }
+
+.BrowseAll i {
+  Text: f178;
+  font-family: FontAwesome;
+  font-size: 15px;
+  font-weight: 400;
+  color: #ffffff;
+  padding-left: 5px;
+  border: none; }
+
+.BrowseAll i:hover {
+  color: lightpink; }
+
+.discountBlock {
+  margin-top: 112px;
+  height: 529px;
+  display: flex;
+  margin-bottom: 98px; }
+
+.discountBlock__offer {
+  width: 767px;
+  background: url(../Discauntblockfoto/Slider.png);
+  background-blend-mode: overlay;
+  position: center;
+  background-repeat: no-repeat; }
+
+.discountBlock__offer-text {
+  padding-top: 125px;
+  padding-left: 40px;
+  font-size: 53.7px;
+  font-weight: 700;
+  color: #ffffff;
+  text-transform: uppercase; }
+
+.discountBlock__offer-for {
+  padding-left: 40px;
+  font-size: 32.2px;
+  font-weight: 700;
+  color: #ffffff;
+  text-transform: uppercase; }
+
+.discountBlock__offer-text span {
+  color: #f16d7f; }
+
+.discountBlock__sales {
+  width: 390px;
+  background-color: #222224;
+  flex-direction: column;
+  justify-content: space-between; }
+
+.discountBlock__sales-Free {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 50px;
+  padding-left: 40px; }
+
+.discountBlock__sales-Free i {
+  width: 45px;
+  height: 32px;
+  color: #f16d7f; }
+
+.discountBlock__seles-Freedelivery {
+  height: 100px;
+  width: 219px; }
+
+.discountBlock__seles-Freedelivery h3 {
+  font-size: 20px;
+  font-weight: 700;
+  color: #fbfbfb;
+  padding-bottom: 10px; }
+
+.discountBlock__seles-Freedelivery p {
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 300;
+  color: #fbfbfb; }
+
+.ShopBlock__mango {
+  font-size: 13px;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  font-weight: 400;
+  text-transform: uppercase; }
+
+.ShopBlock__mangoprise {
+  font-size: 16px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #f16d7f; }
 
 .meinblock__titel {
   margin-top: 85px;
@@ -903,11 +1174,12 @@ em {
     justify-content: space-between;
     margin-bottom: 40px; }
     .meinBlock__choice-product-menu article {
+      width: 264px;
       font-size: 14px;
       line-height: 20px;
       font-weight: 700;
       text-transform: uppercase;
-      color: #6f6e6e;
+      color: #a4a4a4;
       margin-bottom: 25px; }
     .meinBlock__choice-product-menu ul {
       height: 55px;
@@ -947,10 +1219,151 @@ em {
         font-weight: 400;
         text-transform: uppercase;
         color: #6f6e6e;
-        margin-right: 25px; }
+        margin-right: 30px; }
+    .meinBlock__choice-product-menu input[type="range"] {
+      width: 100%; }
+
+.meinBlick__choice-product-menu-prise {
+  display: flex;
+  justify-content: space-between; }
+  .meinBlick__choice-product-menu-prise span {
+    font-size: 14px;
+    line-height: 26px;
+    font-weight: 400;
+    color: #a4a4a4; }
 
 .meinBlock__choice-product-verticalnave {
-  width: 50px;
-  margin-bottom: 50px; }
+  height: 50px;
+  margin-bottom: 50px;
+  background-color: #9f9f9f;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  border: 1px solid #a4a4a4; }
+  .meinBlock__choice-product-verticalnave input {
+    margin-left: 10px;
+    height: 30px;
+    outline: none;
+    overflow: hidden;
+    border: none;
+    border-left: 1px solid #a4a4a4;
+    border-right: 1px solid #a4a4a4;
+    font-size: 14px;
+    line-height: 26px;
+    font-weight: 400;
+    color: #a4a4a4;
+    text-align: center; }
+  .meinBlock__choice-product-verticalnave select {
+    height: 30px;
+    outline: none;
+    overflow: hidden;
+    border: none;
+    text-align: center;
+    border-right: 1px solid #a4a4a4;
+    font-size: 14px;
+    line-height: 26px;
+    font-weight: 400;
+    color: #a4a4a4; }
+
+.meinBlock__choice-product-Man {
+  width: 100%;
+  margin-top: 50px;
+  max-height: 1172px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  border: none;
+  margin-bottom: 40px; }
+  .meinBlock__choice-product-Man-image {
+    height: 364px;
+    width: 263px; }
+    .meinBlock__choice-product-Man-image-slider {
+      width: 100%;
+      background-repeat: no-repeat;
+      background-position: center;
+      margin-bottom: 15px;
+      opacity: 1.0; }
+    .meinBlock__choice-product-Man-image-slider:hover {
+      opacity: 0.5; }
+    .meinBlock__choice-product-Man-image-name {
+      margin-bottom: 15px;
+      font-size: 13px;
+      font-weight: 400;
+      text-transform: uppercase;
+      color: #a4a4a4; }
+    .meinBlock__choice-product-Man-image-prise {
+      margin-bottom: 15px;
+      font-size: 16px;
+      line-height: 1.2;
+      font-weight: 700;
+      text-transform: uppercase;
+      color: #f16d7f; }
+
+.meinBlock__choice-product-pagination {
+  display: flex;
+  justify-content: space-between; }
+  .meinBlock__choice-product-pagination button {
+    height: 55px;
+    width: 150px;
+    background-color: #ffffff;
+    border: 1px solid #f16d7f;
+    border-radius: 5%;
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 300;
+    color: #f16d7f; }
+  .meinBlock__choice-product-pagination button:hover {
+    color: #a4a4a4; }
+
+.pagination {
+  display: flex;
+  align-items: center;
+  height: 55px;
+  width: 261px;
+  border-radius: 5%;
+  border: 1px solid #a4a4a4; }
+  .pagination a {
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 300;
+    color: #838383;
+    padding-left: 18px; }
+  .pagination a:hover {
+    color: #f16d7f; }
+
+.informationBlock {
+  margin-top: 110px;
+  background-color: #222222;
+  min-height: 341px; }
+  .informationBlock-Produckt {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    padding-top: 90px; }
+
+.discountBlock__sales-Free i {
+  width: 45px;
+  height: 32px;
+  color: #f16d7f; }
+
+.discountBlock__seles-Freedelivery {
+  height: 100px;
+  width: 309px; }
+
+.discountBlock__seles-Freedelivery h3 {
+  font-size: 20px;
+  font-weight: 700;
+  color: #fbfbfb;
+  padding-bottom: 10px; }
+
+.discountBlock__seles-Freedelivery p {
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 300;
+  color: #fbfbfb; }
+
+.subscribeBlock {
+  margin-top: 0; }
 
 /*# sourceMappingURL=Newstyle.css.map */
